# seapodym-parallel

./: CMakeLists.txt  CmdLineArgParser_8h_source.html  DataProvider_8h_source.html  DistDataCollector_8h_source.html  README.md  SeapodymCohortAbstract_8h_source.html  SeapodymCohortDependencyAnalyzer_8h_source.html  SeapodymCohortFake_8h.html  SeapodymCohortFake_8h_source.html  SeapodymCohortManager_8h_source.html  SeapodymCourier_8h_source.html  Tags_8h_source.html  TaskDependencyManager_8h_source.html  TaskManager_8h_source.html  TaskScore_8h_source.html  TaskStepManager_8h_source.html  TaskStepWorker_8h_source.html  TaskWorker_8h_source.html  annotated.html  classCmdLineArgParser-members.html  classCmdLineArgParser.html  classDataProvider-members.html  classDataProvider.html  classDistDataCollector-members.html  classDistDataCollector.html  classSeapodymCohortAbstract-members.html  classSeapodymCohortAbstract.html  classSeapodymCohortAbstract__inherit__graph.map  classSeapodymCohortAbstract__inherit__graph.md5  classSeapodymCohortDependencyAnalyzer-members.html  classSeapodymCohortDependencyAnalyzer.html  classSeapodymCohortFake-members.html  classSeapodymCohortFake.html  classSeapodymCohortFake__coll__graph.md5  classSeapodymCohortFake__inherit__graph.map  classSeapodymCohortManager-members.html  classSeapodymCohortManager.html  classSeapodymCourier-members.html  classSeapodymCourier.html  classSeapodymTaskManager.html  (+44 more)
.github/workflows/: build-apptainer.yml  build.yml  ci.yml
apptainer/: seapodym-parallel-gnu.def
cmake/: FindFmt.cmake  FindSpdlog.cmake
defs/: seapodym-parallel-gnu.def
misc/: SeapodymCohorts.pptx
report/cohort-parallelisation/: main.tex  plot_async.py  results_asyncN160.csv  results_asyncN20.csv  results_asyncN40.csv  results_asyncN80.csv
report/cohort-parallelisation/results/: plot_results.py  resultsNw10_nm10_nd10000.csv  resultsNw10_nm10_nd20000.csv  resultsNw10_nm10_nd5000.csv  resultsNw10_nm20_nd10000.csv  resultsNw10_nm20_nd20000.csv  resultsNw10_nm20_nd5000.csv  resultsNw10_nm2_nd10000.csv  resultsNw10_nm2_nd20000.csv  resultsNw10_nm2_nd5000.csv  resultsNw10_nm5_nd10000.csv  resultsNw10_nm5_nd20000.csv  resultsNw10_nm5_nd5000.csv  resultsNw20_nm10_nd10000.csv  resultsNw20_nm10_nd20000.csv  resultsNw20_nm10_nd5000.csv  resultsNw20_nm20_nd10000.csv  resultsNw20_nm20_nd20000.csv  resultsNw20_nm20_nd5000.csv  resultsNw20_nm2_nd10000.csv  resultsNw20_nm2_nd20000.csv  resultsNw20_nm2_nd5000.csv  resultsNw20_nm5_nd10000.csv  resultsNw20_nm5_nd20000.csv  resultsNw20_nm5_nd5000.csv  resultsNw40_nm10_nd10000.csv  resultsNw40_nm10_nd20000.csv  resultsNw40_nm10_nd5000.csv  resultsNw40_nm20_nd10000.csv  resultsNw40_nm20_nd20000.csv  resultsNw40_nm20_nd5000.csv  resultsNw40_nm2_nd10000.csv  resultsNw40_nm2_nd20000.csv  resultsNw40_nm2_nd5000.csv  resultsNw40_nm5_nd10000.csv  resultsNw40_nm5_nd20000.csv  resultsNw40_nm5_nd5000.csv  resultsNw80_nm10_nd10000.csv  resultsNw80_nm10_nd20000.csv  resultsNw80_nm10_nd5000.csv  (+9 more)
report/cohort-parallelisation/results/nm100_nd10000/: resultsNw10.csv  resultsNw100.csv  resultsNw20.csv  resultsNw50.csv
report/cohort-parallelisation/results/nm10_nd15000/: resultsNw10.csv  resultsNw100.csv  resultsNw20.csv  resultsNw50.csv
report/cohort-parallelisation/results_seapodym/: log.txt  plot_scaling.py  times.py  timings.csv
scripts/: CMakeLists.txt  avg.py  avgAsync.py  compare.py  compare_synchronization_approaches.R  hpc3.sl.in  mpi_task_farm.py  plot_gantt.py  plot_parallel_eff.py  profile_task_step_farming_cohort.sl.in  run_async.sl.in  run_task_step_farming_cohort.sl.in  scaling.py
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js
src/: CMakeLists.txt  Courier.cpp  Courier.h  DataProvider.cpp  DataProvider.h  DistDataCollector.cpp  DistDataCollector.h  SeapodymCohortAbstract.h  SeapodymCohortDependencyAnalyzer.cpp  SeapodymCohortDependencyAnalyzer.h  SeapodymCohortFake.cpp  SeapodymCohortManager.cpp  SeapodymCohortManager.h  SeapodymCourier.cpp  SeapodymCourier.h  SeapodymTaskManager.h  Tags.h  TaskDependencyManager.cpp  TaskDependencyManager.h  TaskManager.cpp  TaskManager.h  TaskScore.cpp  TaskScore.h  TaskStepManager.cpp  TaskStepManager.h  TaskStepSyncManager.cpp  TaskStepSyncManager.h  TaskStepWorker.cpp  TaskStepWorker.h  TaskWorker.cpp  TaskWorker.h
tests/: CMakeLists.txt  testAsyncPutGet.cxx  testCollect.cxx  testCourier.cxx  testDataProvider.cxx  testDistDataCollector.cxx  testGet.cxx  testMpiSharedPtr.cxx  testParallel.cxx  testPut.cxx  testSeapodymCohortDependencyAnalyzer.cxx  testSeapodymCohortManager.cxx  testSeapodymCohortManagerFake.cxx  testSeapodymCourier.cxx  testTaskDepFarming.cxx  testTaskFarming.cxx  testTaskScore.cxx  testTaskStepFarming.cxx  testTaskStepFarmingCohort.cxx  testTaskStepFarmingCohortAPlus.cxx  testTaskStepFarmingCohortAPlus3.cxx  testTaskStepFarmingCohortAPlus4.cxx  testTaskStepSyncFarmingCohort.cxx
